# VoxelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Minecraft/: CMakeLists.txt
Minecraft/assets/shaders/: default.fs  default.vs
Minecraft/src/: Block.cpp  Camera.cpp  Chunk.cpp  ChunkManager.cpp  Input.cpp  Log.cpp  Main.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp  Window.cpp  main.cpp
Minecraft/src/include/: Block.hpp  Camera.hpp  Chunk.hpp  ChunkManager.hpp  Input.hpp  Texture.hpp  TextureAtlas.hpp  Vertex.hpp  Window.hpp
VoxelEngine/: CMakeLists.txt
VoxelEngine/assets/shaders/: default.fs
VoxelEngine/src/: Camera.cpp  Chunk.cpp  ChunkManager.cpp  TextureAtlas.cpp  Window.cpp  main.cpp
VoxelEngine/src/include/: Block.hpp  Camera.hpp  Chunk.hpp  ChunkManager.hpp  Input.hpp  Log.hpp  Shader.hpp  TextureAtlas.hpp  Vertex.hpp  Window.hpp
tmp/: CMakeLists.txt
